--- a/_outreach/1.1-cassava.md
+++ b/_outreach/1.1-cassava.md
@@ -1,6 +1,7 @@
 ---
 layout: article
 title: Cassava
+permalink: /outreach/cassava.html
 key: outreach-cassava
 cover: /assets/images/outreach/CassavaTrait.png
 ---
