--- a/_outreach/1.2-sawfly.md
+++ b/_outreach/1.2-sawfly.md
@@ -1,6 +1,7 @@
 ---
 layout: article
 title: Sawfly
+permalink: /outreach/sawfly.html
 key: outreach-sawfly
 cover: /assets/images/outreach/WheatStemSawfly.png
 ---
